# chat_cli

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy-azure.sh
.github/workflows/: release.yml
certs/: ca.crt  server.crt  server.key
client/: CMakeLists.txt  banner.cpp  banner.hpp  crypto.cpp  crypto.hpp  ftxui_app.cpp  ftxui_app.hpp  input_handler.cpp  input_handler.hpp  main.cpp  message_store.cpp  message_store.hpp  theme.cpp  theme.hpp  tls_client.cpp  tls_client.hpp  ui_renderer.cpp  ui_renderer.hpp
common/: CMakeLists.txt  sanitize.hpp
common/config/: config.hpp
common/crypto/: hash.hpp
common/logging/: logger.hpp
common/protocol/: framing.hpp  message.hpp
deploy/: chat-server.service
docker/: .env.example  Dockerfile  config.json  docker-compose.yml
docker/certs/: ca.srl  dh2048.pem  generate.sh
server/: CMakeLists.txt  main.cpp
server/auth/: auth_service.cpp  auth_service.hpp
server/commands/: command_handler.cpp  command_handler.hpp  room_manager.cpp  room_manager.hpp
server/health/: health_endpoint.cpp  health_endpoint.hpp
server/network/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  tls_server.cpp  tls_server.hpp
server/session/: rate_limiter.cpp  rate_limiter.hpp  session.hpp  session_manager.cpp  session_manager.hpp
server/storage/: postgres_storage.cpp  postgres_storage.hpp  redis_pubsub.hpp  sqlite_storage.cpp  sqlite_storage.hpp  storage_interface.hpp
